# nixos-config

./: configuration.nix  flake.nix  hardware-configuration.nix  home.nix
home/: default.nix
home/modules/: desktop.nix  dev.nix  fastfetch.nix  git.nix  hyprland.nix  mako.nix  neovim.nix  packages.nix  screen-recorder.nix  ssh.nix  terminal.nix  waybar.nix  zathura.nix
modules/: audio.nix  boot.nix  core.nix  desktop.nix  gaming.nix  llama-cpp.nix  nvidia.nix  virtualization.nix
templates/cpp/: .gitignore  CMakeLists.txt  flake.nix
templates/cpp-gl/: CMakeLists.txt  flake.nix  main.cpp
templates/cpp-win/: .gitignore  CMakeLists.txt  build.sh  flake.nix  gitignore  main.cpp  toolchain-msvc.cmake
templates/go-win/: .gitignore  build.sh  flake.nix  main.go
templates/python/: .gitignore  flake.nix
templates/re/: flake.nix
templates/rust-win/: .gitignore  Cargo.toml  build.sh  flake.nix
templates/rust-win/.cargo/: config.toml
templates/rust-win/src/: main.rs
